# language-learning-app

./: .gitignore  README.md  delete_duplicates.py  main.py  pyproject.toml  vocab.db
.github/ISSUE_TEMPLATE/: epic-template.md  feature-template.md
assets/data/de/: units.json
assets/data/zh/: units.json
assets/data/zh/character/: unit1.csv  unit13.csv  unit14.csv  unit15.csv  unit4.csv  unit7.csv  unit8.csv  unit9.csv
assets/data/zh/grammar/: unit13.json
assets/data/zh/vocabulary/: unit10.csv  unit13.csv  unit5.csv  unit7.csv  unit8.csv
client/: next.config.ts  package-lock.json  package.json
client/src/api/: index.tsx
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/languages/[language_id]/: layout.tsx  page.tsx
client/src/app/languages/[language_id]/unit/[unit_id]/: page.tsx
client/src/app/languages/[language_id]/unit/new/: page.tsx
client/src/app/languages/[language_id]/update/: page.tsx
client/src/app/languages/new/: page.tsx
client/src/components/: audioRecorder.tsx  availableLanguages.tsx  imageLoader.tsx  mediaLoader.tsx  unitList.tsx
client/src/components/buttons/: backButton.tsx  deleteButton.tsx  navButton.tsx  newElementButton.tsx  updateButton.tsx
client/src/components/cards/: calligraphyFlashCard.tsx  characterFlashCard.tsx  grammarFlashCard.tsx  languageOverviewCard.tsx  unitOverviewCard.tsx  vocabularyFlashCard.tsx
client/src/components/forms/: updateVocabularyForm.tsx
client/src/components/forms/createForms/: createCalligraphyForm.tsx  createCharacterForm.tsx  createExerciseForm.tsx  createGrammarForm.tsx  createLanguageForm.tsx  createUnitForm.tsx  createVocabularyForm.tsx
client/src/components/forms/entityForms/: calligraphyForm.tsx  exerciseForm.tsx  grammarForm.tsx  languageForm.tsx  unitForm.tsx  vocabularyForm.tsx
client/src/components/forms/exerciseForms/: answeringExercise.tsx  conversationExercise.tsx  essayExercise.tsx  exercisePractice.tsx  fillInTheBlankExercise.tsx  matchingExercise.tsx  organizeExercise.tsx  selectInTheBlankExercise.tsx  speakingExercise.tsx  translateExercise.tsx  trueFalseExercise.tsx  typeInTheBlankExercise.tsx
client/src/components/forms/updateForms/: updateCalligraphyForm.tsx  updateCharacterForm.tsx  updateExerciseForm.tsx  updateGrammarForm.tsx  updateLanguageForm.tsx  updateUnitForm.tsx  updateVocabularyForm.tsx
client/src/components/input/: autoWidthInput.tsx  conversationInput.tsx  discreteInput.tsx  trueFalseInput.tsx
client/src/components/lists/: characterList.tsx  exerciseList.tsx  grammarList.tsx  vocabularyList.tsx
client/src/components/selectMenu/: changeUnitMenu.tsx  classicSelectMenu.tsx  openCloseMenu.tsx
client/src/components/textArea/: autoSizeTextArea.tsx
client/src/interface/: Character.tsx  Exercise.tsx  Grammar.tsx  Language.tsx  Unit.tsx  Vocabulary.tsx  base.tsx
client/src/interface/components/: Character.tsx  Passage.tsx  Word.tsx
client/src/interface/containers/: Language.tsx  Unit.tsx
client/src/interface/features/: Calligraphy.tsx  Exercise.tsx  Grammar.tsx  Vocabulary.tsx
client/src/utils/: clean_string.tsx  speech_levels.tsx
data/: units.json
data/dialog/: unit12.json  unit13.json  unit3.json  unit5.json  unit6.json  unit9.json
data/grammar/: unit11.json  unit3.json  unit5.json  unit7.json
data/vocabulary/: unit1.csv  unit4.csv
data/zh/: units.json
data/zh/character/: unit10.csv  unit11.csv  unit12.csv  unit2.csv  unit3.csv  unit5.csv  unit6.csv
data/zh/dialog/: unit0.json  unit1.json  unit10.json  unit11.json  unit14.json  unit15.json  unit2.json  unit4.json  unit7.json  unit8.json
data/zh/grammar/: unit1.json  unit10.json  unit12.json  unit14.json  unit15.json  unit2.json  unit4.json  unit6.json  unit8.json  unit9.json
data/zh/vocabulary/: unit11.csv
db/: languages.json
docs/: CourseModel.drawio  CourseModel.uxf  language_concepts.md
docs/SQL_Architechture_DB/: Explanations.md  GeneralDatabase.uxf
docs/migrations/: old_to_new.sql
notebooks/: dbms.ipynb  dbms_usage.ipynb  manual_import.ipynb
src/: config.py
src/langvault/: tables.py
src/lapp/: __init__.py  __main__.py  backup.py  dbms.py  run.py  tables.py  utils.py
src/lapp/api/: app.py  main.py  models.py
src/lapp/api/routes/: __init__.py  backup.py  calligraphy.py  character.py  evaluate.py  exercise.py  grammar.py  language.py  media.py  unit.py  vocabulary.py
src/lapp/core/: backup.py  database.py  scheduler.py
src/lapp/models/: __init__.py  associations.py  base.py  character.py  exercise.py  grammar.py  language.py  unit.py  vocabulary.py
src/lapp/models/components/: __init__.py  character.py  passage.py  word.py
src/lapp/models/containers/: __init__.py  language.py  unit.py
src/lapp/models/features/: __init__.py  calligraphy.py  exercise.py  grammar.py  vocabulary.py
src/lapp/schemas/: __init__.py  base.py
src/lapp/schemas/components/: __init__.py  character.py  passage.py  word.py
src/lapp/schemas/containers/: __init__.py  language.py  unit.py
src/lapp/schemas/element_dict/: __init__.py  base.py  character.py  exercise.py  grammar.py  language.py  unit.py  vocabulary.py
src/lapp/schemas/features/: __init__.py  calligraphy.py  exercise.py  grammar.py  vocabulary.py
src/lapp/schemas/request/: base.py  new_element.py  update_element.py  update_score.py
src/lapp/services/: __init__.py  backup.py  calligraphy.py  character.py  evaluator.py  exercise.py  feedback.py  grammar.py  language.py  media.py  text_gen.py  tts.py  unit.py  vocabulary.py
src/lapp/services/components/: __init__.py  character.py  passage.py  word.py
src/lapp/services/containers/: __init__.py  language.py  unit.py
src/lapp/services/features/: __init__.py  calligraphy.py  exercise.py  grammar.py  vocabulary.py
src/lapp/tasks/: __init__.py  backup.py  media_cleanup.py  text_gen.py  tts.py
src/lapp/utils/: __init__.py  detect_language.py  file_handler.py  helpers.py  models.py  offline.py  spacy_model.py
vocabulary_csv/: unit0.csv  unit12.csv  unit14.csv  unit15.csv  unit2.csv  unit3.csv  unit5.csv  unit6.csv  unit9.csv
(+24 files in other folders)
