[project]
name = "language-learning-app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Noe Jager", email = "noe.p.jager@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "dotenv>=0.9.9",
    "flasgger>=0.9.7.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "hatchling>=1.27.0",
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "qwen-tts>=0.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lapp"]
