[project]
name = "language-learning-app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Noe Jager", email = "noe.p.jager@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "apscheduler>=3.11.0",
    "ca-core-news-md",
    "da-core-news-md",
    "de-core-news-md",
    "dotenv>=0.9.9",
    "el-core-news-md",
    "en-core-web-md",
    "es-core-news-md",
    "fi-core-news-md",
    "flasgger>=0.9.7.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "fr-core-news-md",
    "hatchling>=1.27.0",
    "hr-core-news-md",
    "ipykernel>=6.29.5",
    "it-core-news-md",
    "ja-core-news-md",
    "ko-core-news-sm",
    "langdetect>=1.0.9",
    "lt-core-news-md",
    "mk-core-news-md",
    "nb-core-news-md",
    "nl-core-news-md",
    "openai-whisper>=20250625",
    "pandas>=2.3.0",
    "pl-core-news-md",
    "pt-core-news-md",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "qwen-tts>=0.1.0",
    "ro-core-news-md",
    "ru-core-news-md",
    "sentence-transformers>=5.2.3",
    "sl-core-news-md",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.41",
    "sv-core-news-md",
    "uk-core-news-md",
    "uvicorn>=0.35.0",
    "zh-core-web-md",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lapp"]

[tool.uv.sources]
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
fr-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.8.0/fr_core_news_md-3.8.0-py3-none-any.whl" }
de-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_md-3.8.0/de_core_news_md-3.8.0-py3-none-any.whl" }
es-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_md-3.8.0/es_core_news_md-3.8.0-py3-none-any.whl" }
pt-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/pt_core_news_md-3.8.0/pt_core_news_md-3.8.0-py3-none-any.whl" }
it-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/it_core_news_md-3.8.0/it_core_news_md-3.8.0-py3-none-any.whl" }
nl-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/nl_core_news_md-3.8.0/nl_core_news_md-3.8.0-py3-none-any.whl" }
el-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/el_core_news_md-3.8.0/el_core_news_md-3.8.0-py3-none-any.whl" }
nb-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/nb_core_news_md-3.8.0/nb_core_news_md-3.8.0-py3-none-any.whl" }
lt-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/lt_core_news_md-3.8.0/lt_core_news_md-3.8.0-py3-none-any.whl" }
zh-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/zh_core_web_md-3.8.0/zh_core_web_md-3.8.0-py3-none-any.whl" }
ja-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_md-3.8.0/ja_core_news_md-3.8.0-py3-none-any.whl" }
ko-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/ko_core_news_sm-3.8.0/ko_core_news_sm-3.8.0-py3-none-any.whl" }
pl-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/pl_core_news_md-3.8.0/pl_core_news_md-3.8.0-py3-none-any.whl" }
ro-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/ro_core_news_md-3.8.0/ro_core_news_md-3.8.0-py3-none-any.whl" }
ru-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_md-3.8.0/ru_core_news_md-3.8.0-py3-none-any.whl" }
ca-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/ca_core_news_md-3.8.0/ca_core_news_md-3.8.0-py3-none-any.whl" }
da-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/da_core_news_md-3.8.0/da_core_news_md-3.8.0-py3-none-any.whl" }
fi-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/fi_core_news_md-3.8.0/fi_core_news_md-3.8.0-py3-none-any.whl" }
hr-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/hr_core_news_md-3.8.0/hr_core_news_md-3.8.0-py3-none-any.whl" }
mk-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/mk_core_news_md-3.8.0/mk_core_news_md-3.8.0-py3-none-any.whl" }
sl-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/sl_core_news_md-3.8.0/sl_core_news_md-3.8.0-py3-none-any.whl" }
sv-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/sv_core_news_md-3.8.0/sv_core_news_md-3.8.0-py3-none-any.whl" }
uk-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/uk_core_news_md-3.8.0/uk_core_news_md-3.8.0-py3-none-any.whl" }

[project.scripts]
server = "lapp.__main__:main"
