[project]
name = "language-learning-app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Noe Jager", email = "noe.p.jager@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "apscheduler>=3.11.0",
    "ca-core-news-md",
    "da-core-news-md",
    "de-core-news-md",
    "python-dotenv>=1.0.0",
    "el-core-news-md",
    "en-core-web-md",
    "es-core-news-md",
    "fi-core-news-md",
    "flasgger>=0.9.7.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "fr-core-news-md",
    "hatchling>=1.27.0",
    "hr-core-news-md",
    "ipykernel>=6.29.5",
    "it-core-news-md",
    "ja-core-news-md",
    "ko-core-news-sm",
    "langcodes>=3.5.1",
    "langdetect>=1.0.9",
    "lt-core-news-md",
    "mk-core-news-md",
    "nb-core-news-md",
    "nl-core-news-md",
    "openai-whisper>=20250625",
    "pandas>=2.3.0",
    "pl-core-news-md",
    "pt-core-news-md",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "qwen-tts>=0.1.0",
    "ro-core-news-md",
    "ru-core-news-md",
    "sentence-transformers>=5.2.3",
    "sl-core-news-md",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.41",
    "sv-core-news-md",
    "torchcodec>=0.10.0",
    "uk-core-news-md",
    "uvicorn>=0.35.0",
    "zh-core-web-md",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lapp"]

[tool.uv.sources]
en-core-web-md  = { path = "wheels/en_core_web_md-3.8.0-py3-none-any.whl" }
fr-core-news-md = { path = "wheels/fr_core_news_md-3.8.0-py3-none-any.whl" }
de-core-news-md = { path = "wheels/de_core_news_md-3.8.0-py3-none-any.whl" }
es-core-news-md = { path = "wheels/es_core_news_md-3.8.0-py3-none-any.whl" }
pt-core-news-md = { path = "wheels/pt_core_news_md-3.8.0-py3-none-any.whl" }
it-core-news-md = { path = "wheels/it_core_news_md-3.8.0-py3-none-any.whl" }
nl-core-news-md = { path = "wheels/nl_core_news_md-3.8.0-py3-none-any.whl" }
el-core-news-md = { path = "wheels/el_core_news_md-3.8.0-py3-none-any.whl" }
nb-core-news-md = { path = "wheels/nb_core_news_md-3.8.0-py3-none-any.whl" }
lt-core-news-md = { path = "wheels/lt_core_news_md-3.8.0-py3-none-any.whl" }
zh-core-web-md  = { path = "wheels/zh_core_web_md-3.8.0-py3-none-any.whl" }
ja-core-news-md = { path = "wheels/ja_core_news_md-3.8.0-py3-none-any.whl" }
ko-core-news-sm = { path = "wheels/ko_core_news_sm-3.8.0-py3-none-any.whl" }
pl-core-news-md = { path = "wheels/pl_core_news_md-3.8.0-py3-none-any.whl" }
ro-core-news-md = { path = "wheels/ro_core_news_md-3.8.0-py3-none-any.whl" }
ru-core-news-md = { path = "wheels/ru_core_news_md-3.8.0-py3-none-any.whl" }
ca-core-news-md = { path = "wheels/ca_core_news_md-3.8.0-py3-none-any.whl" }
da-core-news-md = { path = "wheels/da_core_news_md-3.8.0-py3-none-any.whl" }
fi-core-news-md = { path = "wheels/fi_core_news_md-3.8.0-py3-none-any.whl" }
hr-core-news-md = { path = "wheels/hr_core_news_md-3.8.0-py3-none-any.whl" }
mk-core-news-md = { path = "wheels/mk_core_news_md-3.8.0-py3-none-any.whl" }
sl-core-news-md = { path = "wheels/sl_core_news_md-3.8.0-py3-none-any.whl" }
sv-core-news-md = { path = "wheels/sv_core_news_md-3.8.0-py3-none-any.whl" }
uk-core-news-md = { path = "wheels/uk_core_news_md-3.8.0-py3-none-any.whl" }

[project.scripts]
server = "lapp.__main__:main"
